--- a/catalogo.html
+++ b/catalogo.html
@@ -4,8 +4,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo</title>
+    <link rel="stylesheet" href="catalogo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
-    <h1>hahaha</h1>
+<div class="container">
+    <div class="navbar-container">
+        <nav>
+            <a href="#"><img class="logo"src = "img/logob.png"></a>
+            <ul class="navbar-items">
+                <li><a href="#sobre">ATRAÇÕES</a></li><!-- cadastro? -->
+                <li><a href="#">PASSAPORTE</a></li><!-- atrações -->
+                <li><a href="#">OPCIONAIS</a></li><!-- cadastro? -->
+                <li><a href="#" class="default-btn">COMPRAR AGORA  </a></li>  
+                <li><i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+        </nav>
+    </div>    
+    </div>
+    <main>
+        <div class="main-banner">
+                <h1></h1>
+        </div>
+    </main><br><br>
+    <section id="sobre">
+    <div class="container">
+        <div class="card card-1">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>FIREWHIP</p>
+            <a href="https://www.betocarrero.com.br/atracoes/firewhip">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-2">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>BIG TOWER</p>
+            <a href="https://www.betocarrero.com.br/atracoes/big-tower">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-3">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>STAR MOUNTAIN</p>
+            <a href="https://www.betocarrero.com.br/atracoes/star-mountain">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-4">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>TCHIBUM</p>
+            <a href="https://www.betocarrero.com.br/atracoes/tchibum">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-5">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>BARCO PIRATA</p>
+            <a href="https://www.betocarrero.com.br/atracoes/barco-pirata">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-6">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>MADAGASCAR CRAZY RIVER</p>
+            <a href="https://www.betocarrero.com.br/atracoes/madagascar-crazy-river-adventure">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-7">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>REBULIÇO</p>
+            <a href="https://www.betocarrero.com.br/atracoes/rebulico">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-8">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>SUPER SOAKER SPLASH</p>
+            <a href="https://www.betocarrero.com.br/atracoes/super-soaker-splash">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-9">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>SPIN BLAST</p>
+            <a href="https://www.betocarrero.com.br/atracoes/spin-blast">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-10">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>TIGOR MOUNTAIN</p>
+            <a href="https://www.betocarrero.com.br/atracoes/tigor-mountain">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-11">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>RASKAPUSKA</p>
+            <a href="https://www.betocarrero.com.br/atracoes/raskapuska">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-12">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>HOT WHEELS EPIC SHOW</p>
+            <a href="https://www.betocarrero.com.br/atracoes/hot-wheels-epic-show">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-13">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>FERROVIA DINO MAGIC</p>
+            <a href="https://www.betocarrero.com.br/atracoes/ferrovia-dinomagic">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-14">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>RODA GIGANTE</p>
+            <a href="https://www.betocarrero.com.br/atracoes/roda-gigante">Ver Mais</a>
+        </div>  
+    </div>
+    <div class="card card-15">
+        <div class="card-image"></div>
+        <div class="card-description">
+            <p>CARROSSEL VENEZIANO</p>
+            <a href="https://www.betocarrero.com.br/atracoes/carrossel-veneziano">Ver Mais</a>
+        </div>  
+    </div>
+</div>    
+</section>
 </body>
 </html>
