--- a/catalogo.html
+++ b/catalogo.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="img/logob.png">
+
 
 </head>
 <body>
@@ -18,6 +21,7 @@
         <nav>
             <a href="#"><img class="logo"src = "img/logob.png"></a>
             <ul class="navbar-items">
+
                 <li><a href="#sobre">ATRAÇÕES</a></li><!-- cadastro? -->
                 <li><a href="#">PASSAPORTE</a></li><!-- atrações -->
                 <li><a href="#">OPCIONAIS</a></li><!-- cadastro? -->
@@ -141,5 +145,26 @@
     </div>
 </div>    
 </section>
+<section class="contact-container">
+    <h2>Entre em contato</h2>
+    <p>Qualquer dúvida me manda uma mensagem :) </p>
+    <form>
+        <input type="text" name="name" placeholder="Seu nome">
+        <input type="text" name="email" placeholder="Seu e-mail">
+        <textarea name="message" placeholder="Digite sua mensagem"></textarea>
+        <input type="submit" value="Enviar">
+    </form>
+</section>
+</main>
+<footer>
+
+    <p>RafaelaSevero @ 2024 :)</p>
+    <div class="social-icons">
+    <a href="https://www.instagram.com/_rafaasevero/" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+    </a>
+    </div>
+</footer>
+
 </body>
 </html>
